Changed canvas image to direct Image

--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,6 @@
                 <li>Select an image.</li>
                 <ul>
                     <li>If the image is from internet copy the image address and paste it into the text box below.
-                        <br> (NOTE: Some images may not be accessible)
                     </li>
                     <li>If the image is from you device. Click on Choose file button and select the image from your
                         device.</li>
@@ -58,6 +57,7 @@
     </div>
     <div align="center">
         <div class="answer"></div>
+        <img hidden class="image" alt="Cannot fetch this image">
         <div><canvas hidden="true" height="1000" width="700" /></div>
     </div>
 
