--- a/templates/index.html
+++ b/templates/index.html
@@ -29,16 +29,10 @@
             <hr>
             <h5>How to use this app?</h5>
             <ul>
-                <li>Select an image.</li>
-                <ul>
-                    <li>If the image is from internet copy the image address and paste it into the text box below.
-                    </li>
-                    <li>If the image is from you device. Click on Choose file button and select the image from your
-                        device.</li>
-                </ul>
+                <li>Click on Choose file button and select the image from your device.</li>
                 <li>The image will be shown below.</li>
-                <li>Click on any part of the image to get the color name.</li>
-                <li>Color name is shown above the image.</li>
+                <li>Click on any part of the image to get the Color Name.</li>
+                <li>Color Name is shown above the image.</li>
             </ul>
             <hr>
         </div>
@@ -48,18 +42,14 @@
             <div><label for="file" style="cursor: pointer; margin-right: 12rem;">Upload Image</label></div>
             <input type="file" accept="image/*" name="image" id="file" class="imageInput form-control-file">
         </div>
-        <h6>OR</h6>
-        <div class="form-group">
-            <div><label for="urlText">Enter URL for fetching the image:</label></div>
-            <input type="text" id="urlText" class="urlImage">
-            <button class="submit btn btn-success">SUBMIT</button>
-        </div>
     </div>
     <div align="center">
         <div class="answer"></div>
         <img hidden class="image" alt="Cannot fetch this image">
         <div><canvas hidden="true" height="1000" width="700" /></div>
     </div>
+
+    <br>
 
     <script src="/static/app.js"></script>
 </body>
